# hexbomb

./: Cargo.toml  readme.md
src/: main.rs
