[package]
name = "hexbomb"
version = "0.1.0"
authors = ["Darren Mulholland <dmulholl@tcd.ie>"]
edition = "2018"
description = "A hexdump utility."
license = "MIT"
homepage = "https://www.dmulholl.com/dev/hexbomb.html"
repository = "https://github.com/dmulholl/hexbomb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
