[package]
name = "hexbomb"
version = "0.2.0"
authors = ["Darren Mulholland <dmulholl@tcd.ie>"]
edition = "2018"
description = "A command line hexdump utility with style."
license = "MIT"
homepage = "https://www.dmulholl.com/dev/hexbomb.html"
repository = "https://github.com/dmulholl/hexbomb"

[dependencies]
arguably = "2.0.0-alpha"
colored = "2.0.0"

