[package]
name = "hexbomb"
version = "0.3.2"
authors = ["Darren Mulholland <dmulholl@tcd.ie>"]
edition = "2018"
description = "A hexdump utility with style."
license = "0BSD"
homepage = "https://www.dmulholl.com/dev/hexbomb.html"
repository = "https://github.com/dmulholl/hexbomb"
readme="readme.md"

[dependencies]
arguably = "2.0.0"
colored = "2.0.0"

